# cppWebApp

./: .gitignore  AGENTS.md  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  MemoryMonitor.cpp  MemoryMonitor.h  PasswordUtils.cpp  PasswordUtils.h  Utils.cpp  Utils.h  build.bat  build.ps1  dev.sh  index.html  main.cpp  run.bat  temp.cpp  webapp  winBuild.bat  wt_config.xml
components/: passwordEdit.h
css/: custom.css  styles.css
routes/: RouteManager.cpp  RouteManager.h
style/: style.css  style_old.css
widgets/: DashboardWidget.cpp  DashboardWidget.h  LoginWidget.cpp  LoginWidget.h  SecuritySettings.cpp  SecuritySettings.h  UsersAdd.cpp  UsersAdd.h  UsersList.cpp  UsersList.h  dash.cpp  dash.h  usersAdd.h
